--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: url("../public/bg.gif");
 }
 
 .App-logo {
@@ -14,7 +15,10 @@
 }
 
 .App-header {
+  background-image: url("../public/bg.gif");
+  background-repeat: no-repeat;
   background-color: #282c34;
+  background-size: 100vw 100vh;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +26,15 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Body-wrapper{
+  color: #000000;
+  margin-top: 10vh;
+  padding: 1rem;
+  background-color: gray;
+    opacity: .75;
+    border-radius: 2rem;
 }
 
 .App-link {
