--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,17 +28,25 @@
   color: white;
 }
 
-.Body-wrapper{
+.Body-wrapper {
   color: #000000;
   margin-top: 10vh;
   padding: 1rem;
   background-color: gray;
-    opacity: .75;
-    border-radius: 2rem;
+  opacity: 0.75;
+  border-radius: 2rem;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Inventory-Wrapper {
+  background-color: gray;
+  opacity: 0.75;
+  border-radius: 2rem;
+  width: 50vw;
+  height: 50vh;
 }
 
 @keyframes App-logo-spin {
